--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,10 +1,10 @@
-<h2>{{artistId.artist.0.name}} albums:</h2>
-<div>
-    {{#each artistId}}
+<h2>{{album.0.artists.0.name}} Albums:</h2>
+
+    {{#each album}}
     <div>
         <h3>{{name}}</h3>
         <p><img src="{{images.0.url}}" alt="{{name}}" width="20%" height="auto" /></p>
         {{!-- <p><a href="/albums/{{id}}">View Albums</a></p> --}}
+        <a href="/tracks/{{id}}">View tracks</a>
     </div>
     {{/each}}
-</div>
