--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,10 +1,10 @@
 <h2>{{album.0.artists.0.name}} Albums:</h2>
-
+<div>
     {{#each album}}
     <div>
         <h3>{{name}}</h3>
-        <p><img src="{{images.0.url}}" alt="{{name}}" width="20%" height="auto" /></p>
-        {{!-- <p><a href="/albums/{{id}}">View Albums</a></p> --}}
-        <a href="/tracks/{{id}}">View tracks</a>
+        <p><img src="{{images.0.url}}" alt="{{name}}" width="500px" height="auto" /></p>
+        <p><a href="/tracks/{{id}}">View Tracks</a></p>
     </div>
     {{/each}}
+</div>
