--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -3,7 +3,7 @@
     {{#each artist}}
     <div>
         <h3>{{name}}</h3>
-        <p><img src="{{images.0.url}}" alt="{{name}}" width="20%" height="auto" /></p>
+        <p><img src="{{images.0.url}}" alt="{{name}}" width="500px" height="auto" /></p>
         <p><a href="/albums/{{id}}">View Albums</a></p>
     </div>
     {{/each}}
