--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <title>LAB Express Spotify</title>
     <link rel="stylesheet" href="styles/style.css" />
 </head>
+<h1>LAB Express Spotify, made by Fran Rabassa and Andrea Fàbregas</h1>
 <body>
 
     {{{body}}}
